[package]
name = "bangers-of-the-month"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "botm"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
base64 = "0.21.0"
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["derive"] }
color-eyre = "0.6.2"
dotenv = "0.15.0"
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
eframe = "0.20.1"
egui = { version = "0.20.1", features = ["persistence"] }
egui_extras = "0.20.0"
env_logger = "0.10.0"
image = "0.24.5"
itertools = "0.10.5"
json = "0.12.4"
log = "0.4.17"
multipart = "0.18.0"
notify-rust = "4.6.0"
oauth2 = "4.3.0"
open = "3.2.0"
poll-promise = "0.2.0"
powershell_script = "1.0.4"
reqwest = { version = "0.11.13", features = ["blocking", "json", "multipart"] }
rspotify = { version = "0.11.5", features = ["cli", "env-file", "client-ureq", "ureq-rustls-tls"], default-features = false }
serde = { version = "1.0.148", features = ["serde_derive"] }
serde_json = "1.0.89"
simple-logging = "2.0.2"
simple_logger = "4.0.0"
spotify-oauth = "0.3.0"
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = ["full"] }
url = "2.3.1"
version = "3.0.0"

[package.metadata.release]
pre-release-hook = ["git-cliff", "-t", "{{version}}", "-o", "CHANGELOG.md"]
consolidate-commits = true
